--- a/labs/account/templates/account/create.html
+++ b/labs/account/templates/account/create.html
@@ -1,16 +1,24 @@
-{% extends "./base_account.html" %} {% block title %}
+{% extends "base.html" %} {% block title %}
 <div>
-    <h1>create account</h1>
+    <h1>Create Account</h1>
 </div>
 {% endblock %} {% block content %}
 
-<form action="">
+<form method="POST">
+    {% csrf_token %}
+
     <div>
-        <label for="email">Email:</label>
+        <label for="username">Username: </label>
+        <input type="text" id="username" name="username" required />
+    </div>
+
+    <div>
+        <label for="email">Email: </label>
         <input type="email" id="email" name="email" required />
     </div>
+
     <div>
-        <label for="password">password:</label>
+        <label for="password">Password: </label>
         <input type="password" id="password" name="password" required />
     </div>
 
