--- a/labs/account/templates/account/updates.html
+++ b/labs/account/templates/account/updates.html
@@ -1,19 +1,52 @@
-{% extends './base_account.html' %} {% block title %}
+{% extends 'base.html' %} {% block title %}
 <div>
-    <h1>update account</h1>
+    <h1>Update Account</h1>
 </div>
+
 {% endblock %} {% block content %}
-<form action="">
+<form method="POST">
+    {% csrf_token %}
+
     <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+        <label for="username">Username: </label>
+        <input
+            type="text"
+            id="username"
+            name="username"
+            value="{{ account.username }}"
+            required
+        />
     </div>
+
     <div>
-        <label for="password">password:</label>
-        <input type="password" id="password" name="password" required />
+        <label for="email">Email: </label>
+        <input
+            type="email"
+            id="email"
+            name="email"
+            value="{{ account.email }}"
+            required
+        />
     </div>
+
+    <div>
+        <label for="password">Password: </label>
+        <input
+            type="password"
+            id="password"
+            name="password"
+            value="{{ account.password }}"
+            required
+        />
+    </div>
+
     <div>
         <input type="submit" value="Submit" />
     </div>
 </form>
-{% endblock %}
+
+{% if error %}
+<div>
+    <h3>{{ error }}</h3>
+</div>
+{% endif %} {% endblock %}
