--- a/labs/track/templates/delete.html
+++ b/labs/track/templates/delete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block title %}
 
 <div>
-    <h1>delete account</h1>
+    <h1>delete track</h1>
 </div>
 {% endblock %} {% block content %}
 <div>id: {{ id }}</div>
