--- a/labs/trainee/templates/create.html
+++ b/labs/trainee/templates/create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block title %}
 
 <div>
-    <h1>delete account</h1>
+    <h1>Delete</h1>
 </div>
 {% endblock %} {% block content %}
 <div>id: {{ id }}</div>
