--- a/labs/account/templates/account/create.html
+++ b/labs/account/templates/account/create.html
@@ -1,12 +1,11 @@
-{% extends "base.html" %} {% block title %}
+{% extends "base.html" %} {%load crispy_forms_tags %} {% block title %}
 <div>
     <h1>Create Account</h1>
 </div>
 {% endblock %} {% block content %}
 
-<form method="POST">
-    {% csrf_token %}
-
+<form method="POST" enctype="multipart/form-data">
+    {% csrf_token %} {% comment %}
     <div>
         <label for="username">Username: </label>
         <input type="text" id="username" name="username" required />
@@ -21,6 +20,7 @@
         <label for="password">Password: </label>
         <input type="password" id="password" name="password" required />
     </div>
+    {% endcomment %} {{form|crispy}}
 
     <div>
         <input type="submit" value="Submit" />
