--- a/labs/track/templates/list.html
+++ b/labs/track/templates/list.html
@@ -15,20 +15,27 @@
             <th>ID</th>
             <th>Name</th>
             <th>description</th>
+            <th>Image</th>
             <th>Actions</th>
         </tr>
     </thead>
 
     <tbody>
         {% for track in tracks %}
-        <tr>
+        <tr id="track-{{ track.id }}">
             <td>{{track.id}}</td>
             <td>{{track.name}}</td>
             <td>{{track.description}}</td>
+            <td>{{track.image}}</td>
             <td>
                 <a href="{%url 'track_details' track.id%}">Details</a>
                 <a href="{%url 'track_update' track.id%}">Update</a>
+                {% comment %}
                 <a href="{%url 'track_delete' track.id%}">Delete</a>
+                {% endcomment %}
+                <button class="delete-btn-track" data-id="{{ track.id }}">
+                    Delete
+                </button>
             </td>
         </tr>
         {% endfor %}
