--- a/labs/trainee/templates/update.html
+++ b/labs/trainee/templates/update.html
@@ -1,13 +1,13 @@
-{% extends 'base.html' %} {% block title %}
+{% extends 'base.html' %} {%load crispy_forms_tags %} {% block title %}
 <div>
     <h1>update</h1>
 </div>
 {% endblock %} {% block content %}
 
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
 
-    <div>
+    {% comment %} <div>
         <label for="first_name">First Name: </label>
         <input
             type="text"
@@ -64,7 +64,9 @@
             >{{track.name}}</option>
             {% endfor %}
         </select>
-    </div>
+    </div> {% endcomment %} 
+    
+    {{form|crispy}}
 
     <div>
         <input type="submit" value="Submit" />
